Split script.js into three scripts.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ See top-level LICENSE file for more information
 <head>
     <meta charset="utf-8">
     <title>CodeMeta generator</title>
-    <script src="./script.js"></script>
+    <script src="./utils.js"></script>
+    <script src="./dynamic_form.js"></script>
+    <script src="./codemeta_generation.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
