Make software name required.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ See top-level LICENSE file for more information
             <p title="The name of the software">
                 <label for="name">Name</label>
                 <input type="text" name="name" id="name"
-                    placeholder="My Software" />
+                    placeholder="My Software" required="true" />
             </p>
 
             <p title="The date on which the software was created.">
