Add button to reset form.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ See top-level LICENSE file for more information
     </form>
     <form>
         <input type="button" id="generateCodemeta" value="Generate Codemeta" />
+        <input type="button" id="resetForm" value="Reset form" />
     </form>
 
     <pre contentEditable="true" id="codemetaText"></pre>
