Uniformize order of prefix/legend.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ See top-level LICENSE file for more information
             <input type="hidden" id="author_nb" value="0" />
             <div id="addRemoveAuthor">
                 <input type="button" id="author_add" value="Add one"
-                    onclick="addPerson('Author', 'author');" />
+                    onclick="addPerson('author', 'Author');" />
                 <input type="button" id="author_remove" value="Remove last"
                     onclick="removePerson('author');" />
             </div>
@@ -115,7 +115,7 @@ See top-level LICENSE file for more information
             <input type="hidden" id="contributor_nb" value="0" />
             <div id="addRemoveContributor">
                 <input type="button" id="contributor_add" value="Add one"
-                    onclick="addPerson('Contributor', 'contributor');" />
+                    onclick="addPerson('contributor', 'Contributor');" />
                 <input type="button" id="contributor_remove" value="Remove last"
                     onclick="removePerson('contributor');" />
             </div>
