Add import from CodeMeta.
For now, invalid values are silently discarded by the HTML form.

--- a/index.html
+++ b/index.html
@@ -124,8 +124,11 @@ See top-level LICENSE file for more information
     <form>
         <input type="button" id="generateCodemeta" value="Generate Codemeta" />
         <input type="button" id="resetForm" value="Reset form" />
+        <input type="button" id="importCodemeta" value="Import Codemeta" />
     </form>
 
+    <p id="errorMessage">
+    </p>
     <pre contentEditable="true" id="codemetaText"></pre>
 
     <script>
