--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@ See top-level LICENSE file for more information
 
             <p title="The date on which the software was created.">
                 <label for="dateCreated">Creation date</label>
-                <input type="date" name="dateCreated" id="dateCreated" />
+                <input type="date" name="dateCreated" id="dateCreated"
+                    placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
             </p>
 
             <p title="Date of first publication.">
                 <label for="datePublished">First release date</label>
-                <input type="date" name="datePublished" id="datePublished" />
+                <input type="date" name="datePublished" id="datePublished"
+                    placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
             </p>
 
             <p>
@@ -89,7 +91,8 @@ See top-level LICENSE file for more information
 
             <p title="The date on which the software was most recently modified.">
                 <label for="dateModified">Release date</label>
-                <input type="date" name="dateModified" id="dateModified" />
+                <input type="date" name="dateModified" id="dateModified"
+                    placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
             </p>
         </fieldset>
 
