Restore value of person fields on page reload.
Person fields are dynamically created by JS after the browser
automatically repopulates form fields; so we have to
re-populate them manually.

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ See top-level LICENSE file for more information
 
     <script>
         initCallbacks();
+        loadStateFromStorage();
     </script>
 </body>
 </html>
