Use 'text' field for dates.
1. Prevents import from discarding invalid input (shows a validation error instead)
2. More uniform behavior across browsers (Safari and IE used a fallback method).

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ See top-level LICENSE file for more information
 
             <p title="The date on which the software was created.">
                 <label for="dateCreated">Creation date</label>
-                <input type="date" name="dateCreated" id="dateCreated"
+                <input type="text" name="dateCreated" id="dateCreated"
                     placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
             </p>
 
             <p title="Date of first publication.">
                 <label for="datePublished">First release date</label>
-                <input type="date" name="datePublished" id="datePublished"
+                <input type="text" name="datePublished" id="datePublished"
                     placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
             </p>
 
@@ -91,7 +91,7 @@ See top-level LICENSE file for more information
 
             <p title="The date on which the software was most recently modified.">
                 <label for="dateModified">Release date</label>
-                <input type="date" name="dateModified" id="dateModified"
+                <input type="text" name="dateModified" id="dateModified"
                     placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
             </p>
         </fieldset>
