--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ See top-level LICENSE file for more information
     <meta charset="utf-8">
     <title>CodeMeta generator</title>
     <script src="./utils.js"></script>
+    <script src="./fields_data.js"></script>
     <script src="./dynamic_form.js"></script>
     <script src="./codemeta_generation.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css">
@@ -43,18 +44,9 @@ See top-level LICENSE file for more information
 
             <p>
                 <label for="license">License</label>
-                <select name="license" id="license">
-                    <optgroup label="GNU licenses (LGPL/GPL/AGPL)">
-                        <option value="GPL-2.0-only">GPL v2.0</option>
-                        <option value="GPL-2.0-or-later">GPL v2.0 or later</option>
-                        <option value="GPL-3.0-only">GPL v3.0</option>
-                        <option value="GPL-3.0-or-later">GPL v3.0 or later</option>
-                    </optgroup>
-                    <optgroup label="Non-copyleft licenses">
-                        <option value="MIT">MIT</option>
-                        <option value="Apache-2.0">Apache 2.0</option>
-                    </optgroup>
-                </select>
+                <input list="licenses" name="license" id="license">
+                <datalist id="licenses">
+                </datalist>
             </p>
         </fieldset>
 
@@ -135,6 +127,7 @@ See top-level LICENSE file for more information
     <pre contentEditable="true" id="codemetaText"></pre>
 
     <script>
+        initFieldsData();
         initCallbacks();
         loadStateFromStorage();
     </script>
