--- a/index.html
+++ b/index.html
@@ -28,14 +28,30 @@ See top-level LICENSE file for more information
                 <label for="name">Name</label>
                 <input type="text" name="name" id="name"
                     placeholder="My Software" required="true" />
+                <description>the software title</description>
             </p>
 
 
-            <p title="A unique identifier">
+            <p title="Unique identifier">
                 <label for="identifier">Unique identifier</label>
                 <input type="text" name="identifier" id="identifier"
-                    placeholder="?????"  />
-            </p> <!-- TODO:define better-->
+                    placeholder="10.151.xxxxx"  />
+                    <description>such as ISBNs, GTIN codes, UUIDs etc..  <a href="http://schema.org/identifier">http://schema.org/identifier</a> </description>
+            </p> 
+            <!-- TODO:define better
+            
+            I looked at the schema.org definition of identifier (https://schema.org/identifier),
+            it can be text, url or PropertyValue.
+            Used as follows in data representation with microdata:
+
+            <div property="identifier" typeof="PropertyValue">
+            <span property="propertyID">DOI</span>: 
+            <span property="value">10.151.xxxxx</span>
+            </div>
+            we can use that with identifier-type and identifier-value to have a clearer idea 
+            of what needs to be in the input.
+            
+            -->
 
             <p title="Type of the software application">
                 <label for="applicationCategory">Application category</label>
@@ -68,40 +84,8 @@ See top-level LICENSE file for more information
                 <label for="license">License</label>
                 <input list="licenses" name="license" id="license">
                 <datalist id="licenses">
-                </datalist>
-            </p>
-        </fieldset>
-
-        <fieldset id="fieldsetDevelopmentCommunity">
-            <legend>Additional Info</legend>
-            <p title="Funding">
-                <label for="funding">Funding</label>
-                <input type="text" name="funding" id="funding"
-                    placeholder="software funded by...(e.g. specific grant)"  />
-            </p>
-
-            <p title="Runtime Platform">
-                <label for="runtimePlatform">Runtime Platform</label>
-                <input type="text" name="runtimePlatform" id="runtimePlatform"
-                    placeholder="Operating system"  />
-            </p>
-
-            <p title="Development Status">
-                <label for="developmentStatus">Development Status</label>
-                <input type="text" name="developmentStatus" id="developmentStatus"
-                    placeholder="Concept/WIP/Suspended/Abandoned/Active/Inactive/Unsupported/Moved - (www.repostatus.org)"  />
-            </p>
-
-            <p title="Programming Language">
-                <label for="programmingLanguage">Programming Language</label>
-                <input type="text" name="programmingLanguage" id="programmingLanguage"
-                    placeholder="C#"  />
-            </p>
-
-            <p title="Part of">
-                <label for="isPartOf">Funding</label>
-                <input type="text" name="isPartOf" id="isPartOf"
-                    placeholder="part of ... project"  />
+                </datalist> <!-- TODO: insert placeholder -->
+                <description>from <a href="https://spdx.org/license-list">SPDX licence list</a></description>
             </p>
         </fieldset>
 
@@ -187,6 +171,57 @@ Bugfixes: that and this." ></textarea>
                 <input type="button" id="contributor_remove" value="Remove last"
                     onclick="removePerson('contributor');" />
             </div>
+        </fieldset>
+
+        <fieldset id="fieldsetAdditionalInfo">
+            <legend>Additional Info</legend>
+            <p title="Funding">
+                <label for="funding">Funding</label>
+                <input type="text" name="funding" id="funding"
+                    placeholder="Università di Pisa (PRA_2018_73)"/>
+                <description>software funded by (e.g. specific grant)</description>
+            </p>
+
+            <p title="Runtime Platform">
+                <label for="runtimePlatform">Runtime Platform</label>
+                <input type="text" name="runtimePlatform" id="runtimePlatform"
+                    placeholder="Python2.3"  />
+            </p>
+
+            <p title="Operating System">
+                <label for="operatingSystem">Operating System</label>
+                <input type="text" name="operatingSystem" id="operatingSystem"
+                    placeholder="Android 1.6"  />
+            </p>
+
+            <p title="Development Status">
+            <label for="developmentStatus">Development Status</label>
+                <datalist id="developmentStatuses">
+                        <option value="Concept">
+                        <option value="WIP">
+                        <option value="Suspended">
+                        <option value="Abandoned">
+                        <option value="Active">
+                        <option value="Inactive">
+                        <option value="Unsupported">
+                        <option value="Moved">
+                </datalist>
+                <input list="developmentStatuses" id="developmentStatus" 
+                pattern="Concept|WIP|Suspended|Abandoned|Active|Inactive|Unsupported|Moved">
+                <description>see <a href="http://www.repostatus.org">www.repostatus.org</a> for details</description>
+            </p>
+
+            <p title="Programming Language">
+                <label for="programmingLanguage">Programming Language</label>
+                <input type="text" name="programmingLanguage" id="programmingLanguage"
+                    placeholder="C#"  />
+            </p> <!-- TODO: We should add support for multiple languages, eg. by splitting on commas when exporting. -->
+
+            <p title="Part of">
+                <label for="isPartOf">I part of </label>
+                <input type="URL" name="isPartOf" id="isPartOf"
+                    placeholder="http://The.Bigger.Framework.org"  />
+            </p>
         </fieldset>
     </form>
     <form>
