--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@ See top-level LICENSE file for more information
                     placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
             </p>
 
+            <p title="Comma-separated list of keywords">
+                <label for="keywords">Keywords</label>
+                <input type="text" name="keywords" id="keywords"
+                    placeholder="ephemerides, orbit, astronomy"  />
+            </p>
+
             <p>
                 <label for="license">License</label>
                 <input list="licenses" name="license" id="license" aria-describedby="licenses_descr">
@@ -109,6 +115,12 @@ See top-level LICENSE file for more information
                 <input type="URL" name="issueTracker" id="issueTracker"
                     placeholder="https://github.com/You/RepoName/issues" />
             </p>
+
+            <p title="Related document, software, tools">
+                <label for="relatedLink">Related links</label>
+                <br />
+                <textarea rows="4" cols="50"
+                    name="relatedLink" id="relatedLink"></textarea>
         </fieldset>
 
         <fieldset id="fieldsetCurrentVersion">
@@ -135,9 +147,15 @@ See top-level LICENSE file for more information
 "Change log: this and that;
 Bugfixes: that and this." ></textarea>
             </p>
-<!--TODO: keywords as a string array -->
 
-<!--TODO: software requirements as string array -->
+            <p title="Required software to run/use this one.">
+                <label for="softwareRequirements">Software requirements</label>
+                <br />
+                <textarea rows="4" cols="50"
+                    name="softwareRequirements" id="softwareRequirements"
+                    placeholder=
+"Python 3.4
+https://github.com/psf/requests"></textarea>
 
 <!--TODO: related links as URL array -->
 
