--- a/index.html
+++ b/index.html
@@ -31,6 +31,38 @@ See top-level LICENSE file for more information
                 <div class="field-description" id="name_descr">the software title</div>
             </p>
 
+            <p title="a brief description of the software">
+                <label for="description">Description</label>
+                <br />
+                <textarea rows="4" cols="50"
+                    name="description" id="description"
+                    placeholder="My Software computes ephemerides and orbit propagation. It has been developed from early ´80." ></textarea>
+            </p>
+
+
+            <p title="The date on which the software was created.">
+                <label for="dateCreated">Creation date</label>
+                <input type="text" name="dateCreated" id="dateCreated"
+                    placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
+            </p>
+
+            <p title="Date of first publication.">
+                <label for="datePublished">First release date</label>
+                <input type="text" name="datePublished" id="datePublished"
+                    placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
+            </p>
+
+            <p>
+                <label for="license">License</label>
+                <input list="licenses" name="license" id="license" aria-describedby="licenses_descr">
+                <datalist id="licenses">
+                </datalist> <!-- TODO: insert placeholder -->
+                <div class="field-description" id="licenses_descr">from <a href="https://spdx.org/license-list">SPDX licence list</a></div>
+            </p>
+        </fieldset>
+
+        <fieldset id="fieldsetDiscoverabilityAndCitation">
+            <legend>Discoverability and citation</legend>
 
             <p title="Unique identifier">
                 <label for="identifier">Unique identifier</label>
@@ -59,40 +91,19 @@ See top-level LICENSE file for more information
                     placeholder="Astronomy"  />
             </p>
 
-            <p title="a brief description of the software">
-                <label for="description">Description</label>
-                <br />
-                <textarea rows="4" cols="50"
-                    name="description" id="description"
-                    placeholder="My Software computes ephemerides and orbit propagation. It has been developed from early ´80." ></textarea>
-            </p>
-
-
-            <p title="The date on which the software was created.">
-                <label for="dateCreated">Creation date</label>
-                <input type="text" name="dateCreated" id="dateCreated"
-                    placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
-            </p>
-
-            <p title="Date of first publication.">
-                <label for="datePublished">First release date</label>
-                <input type="text" name="datePublished" id="datePublished"
-                    placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
-            </p>
-
             <p title="Comma-separated list of keywords">
                 <label for="keywords">Keywords</label>
                 <input type="text" name="keywords" id="keywords"
                     placeholder="ephemerides, orbit, astronomy"  />
             </p>
 
-            <p>
-                <label for="license">License</label>
-                <input list="licenses" name="license" id="license" aria-describedby="licenses_descr">
-                <datalist id="licenses">
-                </datalist> <!-- TODO: insert placeholder -->
-                <div class="field-description" id="licenses_descr">from <a href="https://spdx.org/license-list">SPDX licence list</a></div>
+            <p title="Funding">
+                <label for="funding">Funding</label>
+                <input type="text" name="funding" id="funding" aria-describedby="funding_descr"
+                    placeholder="Università di Pisa (PRA_2018_73)"/>
+                <div class="field-description" id="funding_descr">software funded by (e.g. specific grant)</div>
             </p>
+
         </fieldset>
 
         <fieldset id="fieldsetDevelopmentCommunity">
@@ -123,6 +134,37 @@ See top-level LICENSE file for more information
                     name="relatedLink" id="relatedLink"></textarea>
         </fieldset>
 
+        <fieldset id="fieldsetRuntime">
+            <legend>Run-time environment</legend>
+
+            <p title="Programming Language">
+                <label for="programmingLanguage">Programming Language</label>
+                <input type="text" name="programmingLanguage" id="programmingLanguage"
+                    placeholder="C#"  />
+            </p> <!-- TODO: We should add support for multiple languages, eg. by splitting on commas when exporting. -->
+
+            <p title="Runtime Platform">
+                <label for="runtimePlatform">Runtime Platform</label>
+                <input type="text" name="runtimePlatform" id="runtimePlatform"
+                    placeholder=".NET"  />
+            </p>
+
+            <p title="Operating System">
+                <label for="operatingSystem">Operating System</label>
+                <input type="text" name="operatingSystem" id="operatingSystem"
+                    placeholder="Android 1.6"  />
+            </p>
+
+            <p title="Required software to run/use this one.">
+                <label for="softwareRequirements">Other software requirements</label>
+                <br />
+                <textarea rows="4" cols="50"
+                    name="softwareRequirements" id="softwareRequirements"
+                    placeholder=
+"Python 3.4
+https://github.com/psf/requests"></textarea>
+        </fieldset>
+
         <fieldset id="fieldsetCurrentVersion">
             <legend>Current version of the software</legend>
 
@@ -148,72 +190,36 @@ See top-level LICENSE file for more information
 Bugfixes: that and this." ></textarea>
             </p>
 
-            <p title="Required software to run/use this one.">
-                <label for="softwareRequirements">Software requirements</label>
-                <br />
-                <textarea rows="4" cols="50"
-                    name="softwareRequirements" id="softwareRequirements"
-                    placeholder=
-"Python 3.4
-https://github.com/psf/requests"></textarea>
-
-<!--TODO: related links as URL array -->
-
 <!--TODO: referencePublication as ScholarlyArticle array -->
 
         </fieldset>
 
         <fieldset id="fieldsetAdditionalInfo">
-                <legend>Additional Info</legend>
-                <p title="Funding">
-                    <label for="funding">Funding</label>
-                    <input type="text" name="funding" id="funding" aria-describedby="funding_descr"
-                        placeholder="Università di Pisa (PRA_2018_73)"/>
-                    <div class="field-description" id="funding_descr">software funded by (e.g. specific grant)</div>
-                </p>
+            <legend>Additional Info</legend>
 
-                <p title="Runtime Platform">
-                    <label for="runtimePlatform">Runtime Platform</label>
-                    <input type="text" name="runtimePlatform" id="runtimePlatform"
-                        placeholder="Python2.3"  />
-                </p>
+            <p title="Development Status">
+            <label for="developmentStatus">Development Status</label>
+                <datalist id="developmentStatuses">
+                        <option value="Concept">
+                        <option value="WIP">
+                        <option value="Suspended">
+                        <option value="Abandoned">
+                        <option value="Active">
+                        <option value="Inactive">
+                        <option value="Unsupported">
+                        <option value="Moved">
+                </datalist>
+                <input list="developmentStatuses" id="developmentStatus" aria-describedby="developmentStatuses_descr"
+                pattern="Concept|WIP|Suspended|Abandoned|Active|Inactive|Unsupported|Moved">
+                <div class="field-description" id="developmentStatuses_descr">see <a href="http://www.repostatus.org">www.repostatus.org</a> for details</div>
+            </p>
 
-                <p title="Operating System">
-                    <label for="operatingSystem">Operating System</label>
-                    <input type="text" name="operatingSystem" id="operatingSystem"
-                        placeholder="Android 1.6"  />
-                </p>
-
-                <p title="Development Status">
-                <label for="developmentStatus">Development Status</label>
-                    <datalist id="developmentStatuses">
-                            <option value="Concept">
-                            <option value="WIP">
-                            <option value="Suspended">
-                            <option value="Abandoned">
-                            <option value="Active">
-                            <option value="Inactive">
-                            <option value="Unsupported">
-                            <option value="Moved">
-                    </datalist>
-                    <input list="developmentStatuses" id="developmentStatus" aria-describedby="developmentStatuses_descr"
-                    pattern="Concept|WIP|Suspended|Abandoned|Active|Inactive|Unsupported|Moved">
-                    <div class="field-description" id="developmentStatuses_descr">see <a href="http://www.repostatus.org">www.repostatus.org</a> for details</div>
-                </p>
-
-                <p title="Programming Language">
-                    <label for="programmingLanguage">Programming Language</label>
-                    <input type="text" name="programmingLanguage" id="programmingLanguage"
-                        placeholder="C#"  />
-                </p> <!-- TODO: We should add support for multiple languages, eg. by splitting on commas when exporting. -->
-
-                <p title="Part of">
-                    <label for="isPartOf">I part of </label>
-                    <input type="URL" name="isPartOf" id="isPartOf"
-                        placeholder="http://The.Bigger.Framework.org"  />
-                </p>
-            </fieldset>
-
+            <p title="Part of">
+                <label for="isPartOf">I part of </label>
+                <input type="URL" name="isPartOf" id="isPartOf"
+                    placeholder="http://The.Bigger.Framework.org"  />
+            </p>
+        </fieldset>
 
         <div class="dynamicFields">
             <fieldset class="persons" id="author_container">
