Add a note at the end of the 'citation' fieldset about person fields.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ See top-level LICENSE file for more information
                 <div class="field-description" id="funding_descr">software funded by (e.g. specific grant)</div>
             </p>
 
+            Authors and contributors can be added below
         </fieldset>
 
         <fieldset id="fieldsetDevelopmentCommunity">
