Add 'referencePublication' field.

--- a/index.html
+++ b/index.html
@@ -198,6 +198,12 @@ Bugfixes: that and this." ></textarea>
         <fieldset id="fieldsetAdditionalInfo">
             <legend>Additional Info</legend>
 
+            <p title="Scholarly article describing this software">
+                <label for="referencePublication">Reference Publication</label>
+                <input type="URL" name="referencePublication" id="referencePublication"
+                    placeholder="https://doi.org/10.1000/xyz123" />
+            </p>
+
             <p title="Development Status">
             <label for="developmentStatus">Development Status</label>
                 <datalist id="developmentStatuses">
