Fix typo in field name

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ See top-level LICENSE file for more information
             <p title="Unique identifier">
                 <label for="identifier">Unique identifier</label>
                 <input type="text" name="identifier" id="identifier"
-                    placeholder="10.151.xxxxx" aria-describedby="identifier_desc" />
+                    placeholder="10.151.xxxxx" aria-describedby="identifier_descr" />
 
                 <br />
                 <span class="field-description" id="identifier_descr">
