Fix value of required= attribute.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ See top-level LICENSE file for more information
             <p title="The name of the software">
                 <label for="name">Name</label>
                 <input type="text" name="name" id="name" aria-describedby="name_descr"
-                    placeholder="My Software" required="true" />
+                    placeholder="My Software" required="required" />
 
                 <br />
                 <span class="field-description" id="name_descr">the software title</span>
