Normalize value of developmentStatus.

--- a/index.html
+++ b/index.html
@@ -220,17 +220,17 @@ Bugfixes: that and this." ></textarea>
             <p title="Development Status">
             <label for="developmentStatus">Development Status</label>
                 <datalist id="developmentStatuses">
-                        <option value="Concept">
-                        <option value="WIP">
-                        <option value="Suspended">
-                        <option value="Abandoned">
-                        <option value="Active">
-                        <option value="Inactive">
-                        <option value="Unsupported">
-                        <option value="Moved">
+                        <option value="concept">
+                        <option value="wip">
+                        <option value="suspended">
+                        <option value="abandoned">
+                        <option value="active">
+                        <option value="inactive">
+                        <option value="unsupported">
+                        <option value="moved">
                 </datalist>
                 <input list="developmentStatuses" id="developmentStatus" aria-describedby="developmentStatuses_descr"
-                pattern="Concept|WIP|Suspended|Abandoned|Active|Inactive|Unsupported|Moved">
+                pattern="concept|wip|suspended|abandoned|active|inactive|unsupported|moved">
 
                 <br />
                 <span class="field-description" id="developmentStatuses_descr">
