Add downloadUrl property.

--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@ https://github.com/psf/requests"></textarea>
                     placeholder="YYYY-MM-DD" pattern="\d{4}-\d{2}-\d{2}" />
             </p>
 
+            <p title="Download link">
+                <label for="downloadUrl">Download URL</label>
+                <input type="URL" name="downloadUrl" id="downloadUrl"
+                    placeholder="https://example.org/MySoftware.tar.gz" />
+            </p>
+
             <p title="a brief description of the software">
                 <label for="releaseNotes">Release notes</label>
                 <br />
