Add class leafFieldset instead of explicitly listing ids.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ See top-level LICENSE file for more information
     <p>Most fields are optional. Mandatory fields will be highlighted when generating Codemeta.</p>
 
     <form id="inputForm">
-        <fieldset id="fieldsetSoftwareItself">
+        <fieldset id="fieldsetSoftwareItself" class="leafFieldset">
             <legend>The software itself</legend>
 
             <p title="The name of the software">
@@ -68,7 +68,7 @@ See top-level LICENSE file for more information
             </p>
         </fieldset>
 
-        <fieldset id="fieldsetDiscoverabilityAndCitation">
+        <fieldset id="fieldsetDiscoverabilityAndCitation" class="leafFieldset">
             <legend>Discoverability and citation</legend>
 
             <p title="Unique identifier">
@@ -120,7 +120,7 @@ See top-level LICENSE file for more information
             Authors and contributors can be added below
         </fieldset>
 
-        <fieldset id="fieldsetDevelopmentCommunity">
+        <fieldset id="fieldsetDevelopmentCommunity" class="leafFieldset">
             <legend>Development community / tools</legend>
 
             <p title="Link to the repository where the un-compiled, human readable code and related code is located (SVN, Git, GitHub, CodePlex, institutional GitLab instance, etc.).">
@@ -148,7 +148,7 @@ See top-level LICENSE file for more information
                     name="relatedLink" id="relatedLink"></textarea>
         </fieldset>
 
-        <fieldset id="fieldsetRuntime">
+        <fieldset id="fieldsetRuntime" class="leafFieldset">
             <legend>Run-time environment</legend>
 
             <p title="Programming Languages, separated by commas">
@@ -179,7 +179,7 @@ See top-level LICENSE file for more information
 https://github.com/psf/requests"></textarea>
         </fieldset>
 
-        <fieldset id="fieldsetCurrentVersion">
+        <fieldset id="fieldsetCurrentVersion" class="leafFieldset">
             <legend>Current version of the software</legend>
 
             <p title="Version number of the software">
@@ -214,7 +214,7 @@ Bugfixes: that and this." ></textarea>
 
         </fieldset>
 
-        <fieldset id="fieldsetAdditionalInfo">
+        <fieldset id="fieldsetAdditionalInfo" class="leafFieldset">
             <legend>Additional Info</legend>
 
             <p title="Scholarly article describing this software">
