--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ Bugfixes: that and this." ></textarea>
             </p>
 
             <p title="Part of">
-                <label for="isPartOf">I part of </label>
+                <label for="isPartOf">Is part of</label>
                 <input type="URL" name="isPartOf" id="isPartOf"
                     placeholder="http://The.Bigger.Framework.org"  />
             </p>
