--- a/index.html
+++ b/index.html
@@ -290,6 +290,34 @@ Bugfixes: that and this." ></textarea>
     </p>
     <pre contentEditable="true" id="codemetaText"></pre>
 
+    <footer>
+    <p style="text-align:center;">
+    Do you want to improve this tool ?
+    Check out the
+    <a href="https://github.com/codemeta/codemeta-generator">
+      CodeMeta-generator repository</a>
+    <br>
+    Join the
+    <a href="https://github.com/codemeta/codemeta">CodeMeta community</a>
+    discussion
+    <br>
+    The CodeMeta vocabulary -
+    <a href="https://doi.org/10.5063/schema/codemeta-2.0"> v2.0
+    </a>
+    <br>
+    </p>
+
+    <h2 style="text-align:right;">Contributed by</h2>
+    <p style="text-align:right;">
+    <a href="https://www.softwareheritage.org/save-and-reference-research-software/">
+    <img alt="Software Heritage" src="https://annex.softwareheritage.org/public/logo/software-heritage-logo-title-motto.svg"
+         width=300">
+    </a>
+    </p>
+
+
+    </footer>
+
     <script>
         initFieldsData();
         initCallbacks();
