Add support for 'funder' property and improve description of 'funding'.

--- a/index.html
+++ b/index.html
@@ -106,13 +106,22 @@ See top-level LICENSE file for more information
                     placeholder="ephemerides, orbit, astronomy"  />
             </p>
 
-            <p title="Funding">
+            <p title="Funding / grant">
                 <label for="funding">Funding</label>
                 <input type="text" name="funding" id="funding" aria-describedby="funding_descr"
-                    placeholder="Università di Pisa (PRA_2018_73)"/>
+                    placeholder="PRA_2018_73"/>
 
                 <br />
-                <span class="field-description" id="funding_descr">software funded by (e.g. specific grant)</span>
+                <span class="field-description" id="funding_descr">grant funding software development</span>
+            </p>
+
+            <p title="Funding / organization">
+                <label for="funder">Funder</label>
+                <input type="text" name="funder" id="funder" aria-describedby="funder_descr"
+                    placeholder="Università di Pisa"/>
+
+                <br />
+                <span class="field-description" id="funder_descr">organization funding software development</span>
             </p>
 
             Authors and contributors can be added below
