--- a/index.html
+++ b/index.html
@@ -290,9 +290,12 @@ Bugfixes: that and this." ></textarea>
 
     </form>
     <form>
-        <input type="button" id="generateCodemeta" value="Generate Codemeta" />
-        <input type="button" id="resetForm" value="Reset form" />
-        <input type="button" id="importCodemeta" value="Import Codemeta" />
+        <input type="button" id="generateCodemeta" value="Generate Codemeta"
+            title="Creates a Codemeta file below, from the information provided above." />
+        <input type="button" id="resetForm" value="Reset form"
+            title="Erases all fields." />
+        <input type="button" id="importCodemeta" value="Import Codemeta"
+            title="Fills the fields above based on the Codemeta file below." />
     </form>
 
     <p id="errorMessage">
