Show an error message to browsers with no JS support.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@ See top-level LICENSE file for more information
 
     <p>Most fields are optional. Mandatory fields will be highlighted when generating Codemeta.</p>
 
+    <noscript>
+        <p id="noscriptError">
+            This application requires Javascript to show dynamic fields in the form,
+            and generate a JSON file; but your browser does not support Javascript.
+            If you cannot use a browser with Javascript support, you can try
+            <a href="https://codemeta.github.io/tools/">one of the other available tools</a>
+            or write the codemeta.json file directly.
+        </p>
+    </noscript>
+
     <form id="inputForm">
         <fieldset id="fieldsetSoftwareItself" class="leafFieldset">
             <legend>The software itself</legend>
