Add missing quote.

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ Bugfixes: that and this." ></textarea>
         <p style="text-align:right;">
             <a href="https://www.softwareheritage.org/save-and-reference-research-software/">
                 <img alt="Software Heritage" src="https://annex.softwareheritage.org/public/logo/software-heritage-logo-title-motto.svg"
-                    width=300">
+                    width="300">
             </a>
         </p>
     </footer>
