Add label for the output text.

--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@ Bugfixes: that and this." ></textarea>
 
     <p id="errorMessage">
     </p>
+    <p>codemeta.json:</p>
     <pre contentEditable="true" id="codemetaText"></pre>
 
     <footer>
