--- a/index.html
+++ b/index.html
@@ -303,14 +303,14 @@ Bugfixes: that and this." ></textarea>
 
     </form>
     <form>
-        <input type="button" id="generateCodemeta" value="Generate Codemeta"
-            title="Creates a Codemeta file below, from the information provided above." />
+        <input type="button" id="generateCodemeta" value="Generate codemeta.json"
+            title="Creates a codemeta.json file below, from the information provided above." />
         <input type="button" id="resetForm" value="Reset form"
             title="Erases all fields." />
-        <input type="button" id="validateCodemeta" value="Validate Codemeta"
-            title="Checks the Codemta file below is valid, and displays errors." />
-        <input type="button" id="importCodemeta" value="Import Codemeta"
-            title="Fills the fields above based on the Codemeta file below." />
+        <input type="button" id="validateCodemeta" value="Validate codemeta.json"
+            title="Checks the codemeta.json file below is valid, and displays errors." />
+        <input type="button" id="importCodemeta" value="Import codemeta.json"
+            title="Fills the fields above based on the codemeta.json file below." />
     </form>
 
     <p id="errorMessage">
