Explicity show that multiple licenses can be selected with tab or enter

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ See top-level LICENSE file for more information
             </p>
 
             <p>
-                <label for="license">License</label>
+                <label for="license">License(s)</label>
                 <input list="licenses" name="license" id="license"
                     aria-describedby="licenses_descr"> <!-- TODO: insert placeholder -->
 
