Use jsonld.js to expand and compact document

--- a/index.html
+++ b/index.html
@@ -350,6 +350,9 @@ Bugfixes: that and this." ></textarea>
     </p>
   </footer>
 
+  <script type="module">
+    import * as jsonld from "https://unpkg.com/jsonld@1.0.0/dist/jsonld.min.js";
+  </script>
   <script>
     initFieldsData();
     initCallbacks();
