--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ Bugfixes: that and this." ></textarea>
   </footer>
 
   <script type="module">
-    import * as jsonld from "https://unpkg.com/jsonld@1.0.0/dist/jsonld.min.js";
+    import * as jsonld from "./js/libs/jsonld.esm.js";
   </script>
   <script>
     initFieldsData();
