Changes in lib files
* Rename codemeta.json to include version
* Add citation and link
* Use minified version of jsonld.js
* Add license

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ Bugfixes: that and this." ></textarea>
   </footer>
 
   <script type="module">
-    import * as jsonld from "./js/libs/jsonld.esm.js";
+    import * as jsonld from "./js/libs/jsonld/jsonld.esm.min.js";
   </script>
   <script>
     initFieldsData();
