Import jsonld lib as simple js file
Instead of module

--- a/index.html
+++ b/index.html
@@ -350,9 +350,7 @@ Bugfixes: that and this." ></textarea>
     </p>
   </footer>
 
-  <script type="module">
-    import * as jsonld from "./js/libs/jsonld/jsonld.esm.min.js";
-  </script>
+  <script src="./js/libs/jsonld/jsonld.min.js"></script>
   <script>
     initFieldsData();
     initCallbacks();
