Init jsonld loader once and for all

--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@ Bugfixes: that and this." ></textarea>
 
   <script src="./js/libs/jsonld/jsonld.min.js"></script>
   <script>
+    initJsonldLoader();
     initFieldsData();
     initCallbacks();
     loadStateFromStorage();
